# Luma-Trade

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  folder_structure.md  implementation_tasks.md  run.sh
infra/scripts/: backup-db.sh  deploy.sh  init-questdb.sql  setup-host.sh
services/agent-service/: Dockerfile  alert_checker.py  db.py  indicators.py  llm_client.py  main.py  requirements.txt  scheduler.py  telegram_bot.py  telegram_helper.py
services/agent-service/data/: lumina_trade.db
services/dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
services/dashboard/nginx/: default.conf
services/engine/: Dockerfile  pyproject.toml  requirements.txt
services/engine-rust/: Cargo.toml  Dockerfile
services/engine-rust/src/: config.rs  main.rs  models.rs
services/engine-rust/src/api/: handlers.rs  mod.rs  websocket.rs
services/engine-rust/src/core/: aggregator.rs  mod.rs  redis.rs  traits.rs
services/engine-rust/src/indicators/: atr.rs  bollinger_bands.rs  ema.rs  macd.rs  mod.rs  stoch_rsi.rs  vwma.rs
services/engine-rust/src/rules/: ema_position.rs  macd_cross.rs  mod.rs  scorer.rs
services/engine/alerts/: alert_dispatcher.py  telegram_notifier.py
services/engine/api/: fastapi_app.py  routes.py  schemas.py
services/engine/core/: config.py  main_loop.py  message_broker.py
services/engine/data_connectors/: questdb_client.py  redis_client.py
services/engine/indicators/: __init__.py  atr.py  base_indicator.py  bollinger_bands.py  ema.py  macd.py  stoch_rsi.py  vwma.py
services/engine/rules_engine/: __init__.py  base_rule.py  confidence_scorer.py  hard_rules_gate.py  rule_atr.py  rule_bb_cross.py  rule_candle_confirm.py  rule_ema_position.py  rule_macd.py  rule_stoch_rsi.py  rule_volume.py  rule_vwma_trend.py
services/ingestor/: Cargo.toml  Dockerfile
services/ingestor/src/: backoff.rs  bybit_client.rs  bybit_rest.rs  config.rs  exchange_trait.rs  main.rs  questdb_writer.rs  redis_publisher.rs
(+25 files in other folders)
