[package]
name = "obscura-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & Data
polars = { version = "0.36", features = ["lazy", "temporal", "dtype-datetime", "timezones", "ewma", "rolling_window", "dynamic_group_by", "abs"] }
chrono = { version = "0.4", features = ["serde"] }

# Data Connectors
redis = { version = "0.24", features = ["tokio-comp", "json", "aio"] }

# Utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1.0"
