[project]
name = "obscura-engine"
version = "0.1.0"
description = "Obscura Trading Engine — Python Logic Engine"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
